# slicot

./: CMakeLists.txt  INSTALL.md  libindex.html
doc/: AB01MD.html  AB01ND.html  AB01OD.html  AB04MD.html  AB05MD.html  AB05ND.html  AB05OD.html  AB05PD.html  AB05QD.html  AB05RD.html  AB05SD.html  AB07MD.html  AB07ND.html  AB08MD.html  AB08MZ.html  AB08ND.html  AB08NZ.html  AB09AD.html  AB09BD.html  AB09BX.html  AB09CD.html  AB09DD.html  AB09ED.html  AB09FD.html  AB09GD.html  AB09HD.html  AB09HX.html  AB09HY.html  AB09ID.html  AB09IX.html  AB09JD.html  AB09KD.html  AB09MD.html  AB09ND.html  AB13AD.html  AB13BD.html  AB13CD.html  AB13DD.html  AB13ED.html  AB13FD.html  (+264 more)
examples/: IB03AD.res  IB03BD.res  MB03BD.res  MB03KD.res  MB03LD.res  MB03WD.res  MB03XD.res  MB03XP.res  MB04BD.res  MB04TB.res  MB05OD.res  TAB01MD.f  TAB01ND.f  TAB01OD.f  TAB04MD.f  TAB05MD.f  TAB05ND.f  TAB05OD.f  TAB05PD.f  TAB05QD.f  TAB05RD.f  TAB07MD.f  TAB07ND.f  TAB08ND.f  TAB08NZ.f  TAB09AD.f  TAB09BD.f  TAB09CD.f  TAB09DD.f  TAB09ED.f  TAB09FD.f  TAB09GD.f  TAB09HD.f  TAB09ID.f  TAB09JD.f  TAB09KD.f  TAB09MD.f  TAB09ND.f  TAB13AD.f  TAB13BD.f  (+184 more)
src/: CMakeLists.txt
src_aux/: CMakeLists.txt  README.md  dhgeqz.f  dlagv2.f  dtgsy2.f
